Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-container">
-                <img src="eskimos11.png" alt="Bingo Poker Pro's Logo" class="logo">
+                <img src="logo.png" alt="Bingo Poker Pro's Logo" class="logo">
             </div>
             <h1>Bingo Poker Pro's Presents</h1>
             <div class="tournament-info" id="tournamentDate">Loading tournament data...</div>
