--- a/leaderboard.html
+++ b/leaderboard.html
@@ -238,7 +238,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-container">
-                <img src="eskimos11.png" alt="Bingo Poker Pro's Logo" class="logo">
+                <img src="images/logo.png" alt="Bingo Poker Pro's Logo" class="logo">
             </div>
             <h1>Bingo Poker Pro's</h1>
             <h2>Presents</h2>
