Update logo image source in admin.html

--- a/admin.html
+++ b/admin.html
@@ -319,7 +319,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-container">
-                <img src="eskimos11.png" alt="Bingo Poker Pro's Logo" class="logo">
+                <img src="images/logo.png" alt="Bingo Poker Pro's Logo" class="logo">
             </div>
             <h1>Points Admin Panel</h1>
             <p>Manage player points, wins, knockouts, and tournament results</p>
