Update link to admin control page

--- a/upload.html
+++ b/upload.html
@@ -331,7 +331,7 @@
             <p>Upload your PokerStars hand history to update the awards board</p>
             
             <div class="nav-buttons">
-                <a href="/admin/admin-control-2025" class="nav-link secondary">
+                <a href="https://pokerpopupstats.onrender.com/admin/admin-control-2025" class="nav-link secondary">
                     Manage Points & Leaderboard
                 </a>
                 <a href="/" class="nav-link">
