--- a/upload.html
+++ b/upload.html
@@ -385,7 +385,7 @@
         // Load current awards on page load
         function loadCurrentAwards() {
             // Fetch from your actual API endpoint
-            fetch('/')
+            fetch('https://pokerpopupstats.onrender.com/')
                 .then(response => response.text())
                 .then(html => {
                     // Parse the current awards from the main page
@@ -444,7 +444,7 @@
 
             try {
                 // Call your actual Python endpoint
-                const response = await fetch('/upload/bingo-poker-secret-2025/process', {
+                const response = await fetch('https://pokerpopupstats.onrender.com/upload/bingo-poker-secret-2025/process', {
                     method: 'POST',
                     body: formData
                 });
